--- a/module2.html
+++ b/module2.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="dark-theme">
+<body class="warm-theme">
+  <div class="bg-wave"></div>
+
   <header>
     <div class="nav-container">
-      <div class="logo-group" style="display:flex; align-items:center;">
+      <div class="logo-group">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{&lt;/&gt;}</span>
+        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -21,6 +23,7 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
       <div class="menu-toggle" id="menuToggle">
@@ -40,35 +43,37 @@
 
     <section class="glass module-lessons">
       <h1>Module 2: Data Structures &amp; Algorithms</h1>
-      <p>Explore arrays, linked lists, trees, and various sorting and searching techniques.</p>
+      <p style="text-align:justify;">
+        This module explores fundamental and advanced data structures—arrays, linked lists, stacks, queues, 
+        trees, graphs, and the core sorting/searching algorithms.
+      </p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Arrays &amp; Linked Lists</div>
-        <div class="timeline-step">Step 2: Stacks &amp; Queues</div>
-        <div class="timeline-step">Step 3: Trees &amp; Graphs</div>
-        <div class="timeline-step">Step 4: Sorting Algorithms</div>
-        <div class="timeline-step">Step 5: Searching Techniques</div>
+        <div class="timeline-step">Step 2: Trees, Graphs &amp; Basic Algorithms</div>
       </div>
       <hr>
+
       <div style="text-align:center; margin:20px 0;">
-        <img src="assets/images/module2_diagram.png" alt="Data Structures Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#aaa;"><em>Figure: Data Structures (placeholder image)</em></p>
+        <img src="assets/images/module2_diagram.png" alt="Data Structures" style="max-width:400px; border-radius:8px;">
+        <p style="font-size:0.9rem; color:#555;"><em>Figure: Data Structures &amp; Algorithms</em></p>
       </div>
+
       <h2>Lesson 1: Arrays &amp; Linked Lists</h2>
-      <p>Understand the implementation and trade‑offs of arrays versus linked lists.</p>
-      <ul>
-        <li>Implement basic operations on both structures.</li>
-        <li>Discuss advantages and disadvantages.</li>
-      </ul>
-      <button class="btn" onclick="openIDE('M2L1')">Open IDE for Lesson 1</button>
+      <p style="text-align:justify;">
+        Understand the implementation and trade-offs of arrays vs. linked lists. Implement basic operations
+        (insert, delete, traversal) for each, and discuss performance.
+      </p>
+      <button class="btn" onclick="openExternalIDE('M2L1')">Open IDE for Lesson 1</button>
+
       <hr>
+
       <h2>Lesson 2: Trees &amp; Graphs</h2>
-      <p>Learn about tree traversals and basic graph algorithms (BFS &amp; DFS).</p>
-      <ul>
-        <li>Implement simple tree traversals.</li>
-        <li>Demonstrate BFS/DFS on a graph.</li>
-      </ul>
-      <button class="btn" onclick="openIDE('M2L2')">Open IDE for Lesson 2</button>
+      <p style="text-align:justify;">
+        Explore tree traversals (in-order, pre-order, post-order) and implement BFS/DFS for graphs. 
+        Apply these to solve basic problems in data structures.
+      </p>
+      <button class="btn" onclick="openExternalIDE('M2L2')">Open IDE for Lesson 2</button>
     </section>
   </main>
 
@@ -76,13 +81,15 @@
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline() {
       document.getElementById('moduleTimeline').classList.toggle('show');
     }
-    function openIDE(lessonID) {
-      window.location.href = `ide.html?lessonID=${lessonID}`;
+    function openExternalIDE(lessonID) {
+      window.open(getWandboxLink(lessonID), '_blank');
     }
   </script>
 </body>
