--- a/module5.html
+++ b/module5.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="dark-theme">
+<body class="warm-theme">
+  <div class="bg-wave"></div>
+
   <header>
     <div class="nav-container">
-      <div class="logo-group" style="display:flex; align-items:center;">
+      <div class="logo-group">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{&lt;/&gt;}</span>
+        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -21,6 +23,7 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
       <div class="menu-toggle" id="menuToggle">
@@ -40,47 +43,53 @@
 
     <section class="glass module-lessons">
       <h1>Module 5: Memory Management &amp; Debugging</h1>
-      <p>Learn efficient memory management techniques and effective debugging strategies in C++.</p>
+      <p style="text-align:justify;">
+        Learn how to handle dynamic memory carefully in C++. Explore manual allocation, 
+        modern smart pointers, and practical debugging tools.
+      </p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Manual Memory Allocation</div>
-        <div class="timeline-step">Step 2: Smart Pointers in Depth</div>
-        <div class="timeline-step">Step 3: Debugging with Valgrind &amp; GDB</div>
+        <div class="timeline-step">Step 2: Smart Pointers &amp; Debugging Tools</div>
       </div>
       <hr>
+
       <div style="text-align:center; margin:20px 0;">
         <img src="assets/images/module5_diagram.png" alt="Memory Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#aaa;"><em>Figure: Memory Management (placeholder image)</em></p>
+        <p style="font-size:0.9rem; color:#555;"><em>Figure: Memory Management Overview</em></p>
       </div>
+
       <h2>Lesson 1: Manual Memory Allocation</h2>
-      <p>Understand dynamic memory allocation using <code>new</code> and <code>delete</code> and how to avoid memory leaks.</p>
-      <ul>
-        <li>Demonstrate manual memory management.</li>
-        <li>Discuss pitfalls such as memory leaks and dangling pointers.</li>
-      </ul>
-      <button class="btn" onclick="openIDE('M5L1')">Open IDE for Lesson 1</button>
+      <p style="text-align:justify;">
+        Use <code>new</code> and <code>delete</code> in a controlled manner, and avoid common pitfalls 
+        like memory leaks and dangling pointers.
+      </p>
+      <button class="btn" onclick="openExternalIDE('M5L1')">Open IDE for Lesson 1</button>
+
       <hr>
-      <h2>Lesson 2: Smart Pointers</h2>
-      <p>Learn to use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and <code>std::weak_ptr</code> for safer memory management.</p>
-      <ul>
-        <li>Convert raw pointer code to smart pointers.</li>
-        <li>Compare different smart pointer types.</li>
-      </ul>
-      <button class="btn" onclick="openIDE('M5L2')">Open IDE for Lesson 2</button>
+
+      <h2>Lesson 2: Smart Pointers &amp; Debugging</h2>
+      <p style="text-align:justify;">
+        Utilize <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and <code>std::weak_ptr</code> 
+        effectively. Explore Valgrind, ASan, GDB, and other debugging tools for memory-related issues.
+      </p>
+      <button class="btn" onclick="openExternalIDE('M5L2')">Open IDE for Lesson 2</button>
     </section>
   </main>
 
   <footer>
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
-  
+
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline() {
       document.getElementById('moduleTimeline').classList.toggle('show');
     }
-    function openIDE(lessonID) {
-      window.location.href = `ide.html?lessonID=${lessonID}`;
+    function openExternalIDE(lessonID) {
+      window.open(getWandboxLink(lessonID), '_blank');
     }
   </script>
 </body>
