--- a/resources.html
+++ b/resources.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="dark-theme">
+<body class="warm-theme">
+  <div class="bg-wave"></div>
+
   <header>
     <div class="nav-container">
       <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{&lt;/&gt;}</span>
+        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -20,6 +22,7 @@
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
       <div class="menu-toggle" id="menuToggle">
@@ -32,19 +35,21 @@
 
   <main class="page-content fade-in resource-section">
     <h1>C++ Learning Resources</h1>
-    <p>Explore curated references, tutorials, and external links to deepen your understanding of modern C++.</p>
-    <div class="resource-list" style="margin-top:30px;">
-      <div class="resource-item glass card-hover floating-card">
+    <p style="max-width: 800px; text-align:justify;">
+      Explore curated references, tutorials, and external links to deepen your understanding of modern C++ and related fields.
+    </p>
+    <div class="resource-list" style="margin-top:30px; display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
+      <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>cppreference.com</h2>
         <p>Comprehensive documentation on C++ language features and STL.</p>
         <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
       </div>
-      <div class="resource-item glass card-hover floating-card">
+      <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>isocpp.org</h2>
         <p>Official C++ standardization information and guidelines.</p>
         <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
       </div>
-      <div class="resource-item glass card-hover floating-card">
+      <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>Learn C++</h2>
         <p>Advanced tutorials and resources for modern C++.</p>
         <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
@@ -55,7 +60,8 @@
   <footer>
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
-  
+
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
   <script src="scripts/main.js"></script>
 </body>
 </html>
