--- a/resume.html
+++ b/resume.html
@@ -7,22 +7,30 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
-<body>
+<body class="warm-theme">
+  <div class="bg-wave"></div>
+
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
-      <h1 class="logo">
+      <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{<></>}</span>
-      </h1>
+        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
+      </div>
       <nav>
-        <ul class="nav-menu">
+        <ul class="nav-menu" id="navMenu">
           <li><a href="index.html" class="nav-link">Home</a></li>
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </div>
   </header>
 
@@ -37,7 +45,7 @@
       </div>
 
       <h3>Profile</h3>
-      <p>
+      <p style="text-align:justify;">
         Accomplished Senior Embedded Software Developer with extensive experience designing real-time systems,
         optimizing embedded software architectures, and delivering reliable, innovative solutions for complex projects.
         Demonstrates expertise in developing cybersecurity protocols, integrating AI technologies, and mentoring diverse
@@ -134,6 +142,8 @@
   <footer>
     <p>© 2025 CodeForge++. All rights reserved.</p>
   </footer>
+
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
   <script src="scripts/main.js"></script>
 </body>
